welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
   while(!estSurBiscuit){
   	if(isFacingTrail==true){
   	baisseBrosse();
   	leveBrosse();
   	avance();
   	}else{
   		gauche();
   	}  // Write your code here
}
baisseBrosse();
prendBiscuit();
}
// Copy your isFacingTrail() here
def isFacingTrail():Boolean = {
if(estFaceMur()==true){
	return false
}
avance();
if(getCouleurSol()!=c){
	recule();
	return true
}else{
	recule();
	return false
}
} 
